k8s/apps/kuboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cwx
  name: kuboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuboard
  template:
    metadata:
      labels:
        app: kuboard
    spec:
      restartPolicy: Always
      containers:
        - name: kuboard
          image: harbor.chenwx.top/public/kuboard:v4.1.0.2
          ports:
            - containerPort: 80
              protocol: TCP
