k8s/apps/kuboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuboard
  namespace: cwx
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: kuboard
